<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yan.attendanceapp.Register3Activity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/question_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/registerButton"
        >

        <ImageView
            android:id="@+id/back_icon"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginLeft="32dp"
            android:text="@string/register3_toolbar"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/allBackground"
        android:orientation="vertical"
        >
        <!--android:orientation="vertical"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_lock_outline_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"/>
                <EditText
                    android:textSize="18sp"
                    android:inputType="text"
                    android:maxLength="4"
                    android:hint="@string/realName"
                    android:textColorHint="@color/inputBg"
                    android:paddingBottom="12dp"
                    android:paddingLeft="40dp"
                    app:theme="@style/MyEditText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:visibility="invisible"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_close_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_lock_outline_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"/>
                <EditText
                    android:textSize="18sp"
                    android:inputType="number"
                    android:maxLength="10"
                    android:hint="@string/studentNum"
                    android:textColorHint="@color/inputBg"
                    android:paddingBottom="12dp"
                    android:paddingLeft="40dp"
                    app:theme="@style/MyEditText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:visibility="invisible"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_close_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <Button
                android:id="@+id/register_over"
                android:layout_marginTop="32dp"
                android:textColor="@color/white"
                android:background="@drawable/circular_button2"
                android:text="@string/register_over"
                android:textSize="18sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>




    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
