<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yan.attendanceapp.RegisterActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/question_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/registerButton"
        >

        <ImageView
            android:id="@+id/back_icon"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginLeft="32dp"
            android:text="@string/register_toolbar"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/allBackground"
        android:orientation="vertical"
        >
        <!--android:orientation="vertical"-->



        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            >
            <EditText
                android:id="@+id/phone_edit"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginRight="16dp"
                android:hint="手机号"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/send_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="点击发送"/>

        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/pin_edit"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginRight="16dp"
                android:hint="验证码"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/pin_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="确定"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:src="@drawable/ic_phone_android_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"/>
                <EditText
                    android:id="@+id/phone_text"
                    android:paddingLeft="40dp"
                    android:paddingBottom="16dp"
                    android:inputType="phone"
                    android:digits="1234567890"
                    android:maxLength="11"
                    android:layout_alignParentTop="true"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:hint="@string/register_phone"
                    android:textColorHint="@color/inputBg"
                    android:textColor="@color/black"
                    app:theme="@style/MyEditText2"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/delete_phone"
                    android:visibility="invisible"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_close_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_lock_outline_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"/>
                <EditText
                    android:id="@+id/register_password"
                    android:textSize="18sp"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:hint="@string/register_pwd"
                    android:textColorHint="@color/inputBg"
                    android:paddingBottom="12dp"
                    android:paddingLeft="40dp"
                    app:theme="@style/MyEditText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <CheckBox
                    android:layout_marginRight="8dp"
                    android:id="@+id/password_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/select_password"
                    android:button="@null"/>
            </RelativeLayout>
            <Button
                android:id="@+id/send_and_next"
                android:layout_marginTop="32dp"
                android:textColor="@color/white"
                android:background="@drawable/circular_button2"
                android:text="@string/next_page"
                android:textSize="18sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

            </LinearLayout>
        </LinearLayout>




    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
